# rapl_payroll_automation

./: .gitignore  README.md  license.txt  pyproject.toml
rapl_payroll_automation/: hooks.py  modules.txt  patches.txt
rapl_payroll_automation/api/: attendance_automation.py  late_mark_automation.py  overtime_automation.py  payroll_automation_utils.py  payroll_preflight_check.py  salary_slip_hooks.py
rapl_payroll_automation/doctype/rapl_grade_ot_denominator_rule/: rapl_grade_ot_denominator_rule.py
rapl_payroll_automation/doctype/rapl_payroll_automation_settings/: rapl_payroll_automation_settings.json  rapl_payroll_automation_settings.py
rapl_payroll_automation/page/payroll_automation_dashboard/: payroll_automation_dashboard.js
rapl_payroll_automation/rapl_payroll_automation/doctype/rapl_grade_ot_denominator_rule/: rapl_grade_ot_denominator_rule.json
rapl_payroll_automation/rapl_payroll_automation/doctype/rapl_late_mark_band/: rapl_late_mark_band.json  rapl_late_mark_band.py
rapl_payroll_automation/rapl_payroll_automation/doctype/rapl_late_mark_processing/: rapl_late_mark_processing.js  rapl_late_mark_processing.json  rapl_late_mark_processing.py
rapl_payroll_automation/rapl_payroll_automation/doctype/rapl_late_mark_processing_entry/: rapl_late_mark_processing_entry.js  rapl_late_mark_processing_entry.json  rapl_late_mark_processing_entry.py
rapl_payroll_automation/rapl_payroll_automation/doctype/rapl_overtime_processing/: rapl_overtime_processing.js  rapl_overtime_processing.json  rapl_overtime_processing.py
(+6 files in other folders)
