[project]
name = "rapl_payroll_automation"
authors = [
    { name = "Rinix Automation Pvt Ltd" }
]
description = "Custom Overtime, Late Mark, Half Day, and Early Exit payroll automation for RAPL"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
